[package]
name = "webdev"
version = "0.2.0"
homepage = "https://github.com/jeremychone/rust-webdev"
description = "Simple local dev web server for localhost development (NOT FOR PROD)"
repository = "https://github.com/jeremychone/rust-webdev"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
keywords = [
	"web",
	"localfolder",
	"development",
  "localhost"
]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
edition = "2024"
resolver = "3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
# -- Web
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs"] }
# -- Others
clap = { version = "4", features = ["cargo"] }
pathdiff = "0.2"
notify = "8"
notify-debouncer-mini = "0.7"